--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,7 @@
 {
+    "name": "${localWorkspaceFolderBasename}",
+	"runArgs": ["--name", "dc-${localWorkspaceFolderBasename}"],
+
     "image": "mcr.microsoft.com/devcontainers/javascript-node:1-20-bookworm",
     "customizations": {
         "vscode": {
@@ -18,7 +21,16 @@
         }
     },
     "features": {
-        "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+        "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+        "ghcr.io/stuartleeks/dev-container-features/shell-history:0": {},
+		"ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
+			"plugins": "colorize zsh-autosuggestions zsh-syntax-highlighting",
+			"omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions https://github.com/zsh-users/zsh-syntax-highlighting.git"
+		},
+        "ghcr.io/devcontainers/features/common-utils:2.5.2": {
+			"configureZshAsDefaultShell": true,
+			"installOhMyZshConfig": true
+		}
     },
     "remoteUser": "node",
     "updateContentCommand": "npm install -g @devcontainers/cli"
