Use custom testuser for non-root testing
To make sure UID remains unchanged.

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -4,3 +4,5 @@ ENV SSL_CERT_FILE=/envcert
 
 RUN mkdir -p /devcontainer-feature/michalbachowski/test-git-repo && \
     git init .
+
+RUN useradd -ms /bin/bash testuser
