--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,12 +38,12 @@ jobs:
     strategy:
       matrix:
         features:
-          #- bash-prompt
+          - bash-prompt
           - bash-sensible
-          #- scalafmt-native
-          #- shell-local
-          #- snyk-cli
-          #- zsh-prompt-currenttime
+          - scalafmt-native
+          - shell-local
+          - snyk-cli
+          - zsh-prompt-currenttime
         baseImage:
           - debian:latest
           - ubuntu:latest
@@ -82,14 +82,14 @@ jobs:
     strategy:
       matrix:
         features:
-          #- bash-prompt
+          - bash-prompt
           - bash-sensible
-          #- custom-ca-cert
-          #- pre-commit-initialize
-          #- scalafmt-native
-          #- shell-local
-          #- snyk-cli
-          #- zsh-prompt-currenttime
+          - custom-ca-cert
+          - pre-commit-initialize
+          - scalafmt-native
+          - shell-local
+          - snyk-cli
+          - zsh-prompt-currenttime
     steps:
       - uses: actions/checkout@v4
 
