--- a/src/shell-local/devcontainer-feature.json
+++ b/src/shell-local/devcontainer-feature.json
@@ -1,5 +1,5 @@
 {
-    "name": "Allow to load any local file during shell init",
+    "name": "Load local file during shell init",
     "id": "shell-local",
     "version": "0.0.2",
     "description": "Adds a step to load (source) custom shell scrip when initializing Bash or Zsh.",
