--- a/src/bash-prompt/devcontainer-feature.json
+++ b/src/bash-prompt/devcontainer-feature.json
@@ -2,5 +2,8 @@
     "name": "Fancy Bash prompt",
     "id": "bash-prompt",
     "version": "0.0.2",
-    "description": "Enables fancy bash prompt for container user."
+    "description": "Enables fancy bash prompt for container user.",
+    "installsAfter": [
+        "./bash-sensible"
+    ]
 }
