--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,17 +22,17 @@
         }
     },
     "features": {
-		"ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
-			"plugins": "colorize zsh-autosuggestions zsh-syntax-highlighting",
-			"omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions https://github.com/zsh-users/zsh-syntax-highlighting.git"
-		},
         "ghcr.io/devcontainers/features/common-utils:2.5.2": {
 			"configureZshAsDefaultShell": true,
 			"installOhMyZshConfig": true
 		},
         "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+		"ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
+			"plugins": "colorize zsh-autosuggestions zsh-syntax-highlighting",
+			"omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions https://github.com/zsh-users/zsh-syntax-highlighting.git"
+		},
+		"ghcr.io/eliises/devcontainer-features/devcontainers-cli:1": {},
         "ghcr.io/stuartleeks/dev-container-features/shell-history:0": {}
     },
-    "remoteUser": "node",
-    "updateContentCommand": "npm install -g @devcontainers/cli"
+    "remoteUser": "node"
 }
