--- a/src/shell-execute-custom-script/devcontainer-feature.json
+++ b/src/shell-execute-custom-script/devcontainer-feature.json
@@ -1,12 +1,17 @@
 {
     "name": "Execute given script during shell init",
     "id": "shell-execute-custom-script",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Adds a step to execute custom shell scrip when initializing Bash or Zsh.",
     "options": {
         "bash_script": {
             "default": "echo Bash > /dev/null",
             "description": "Script to execute when initializing Bash",
+            "type": "string"
+        },
+        "common_script": {
+            "default": "alias git-uncommit-all-changes='git reset --soft \\$(git merge-base HEAD \\${BASE_BRANCH:-main})'",
+            "description": "Script to execute when initializing either Bash or Zsh. By default will add the git-uncommit-all-changes alias, usefull to uncommit all changes made on the branch since creation. You can use the BRANCH_NAME env var to change the main branch.",
             "type": "string"
         },
         "zsh_script": {
