--- a/src/bash-prompt/devcontainer-feature.json
+++ b/src/bash-prompt/devcontainer-feature.json
@@ -1,9 +1,9 @@
 {
     "name": "Fancy Bash prompt",
     "id": "bash-prompt",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "Enables fancy bash prompt for container user.",
     "installsAfter": [
-        "./bash-sensible"
+        "ghcr.io/michalbachowski/devcontainer-features/bash-sensible"
     ]
 }
