--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,13 @@
             ]
         }
     },
+    "mounts": [
+        {
+            "source": "${localEnv:HOME}/.ssh",
+            "target": "/home/node/.ssh",
+            "type": "bind"
+        }
+    ],
     "features": {
         "ghcr.io/devcontainers/features/common-utils:2.5.2": {
 			"configureZshAsDefaultShell": true,
