Add the git-commit-signing feature

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -80,6 +80,7 @@ jobs:
           - bash-sensible
           - custom-ca-cert
           - detect-secrets
+          - git-commit-signing
           - just-completion
           - pre-commit-cache
           - pre-commit-initialize
