--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
           - bash-sensible
           - custom-ca-cert
           - detect-secrets
+          - git-commit-signing
           - pre-commit-cache
           - sbt-cache
           - scalafmt-native
@@ -49,6 +50,7 @@ jobs:
           - bash-sensible
           - custom-ca-cert
           - detect-secrets
+          - git-commit-signing
           - pre-commit-cache
           - sbt-cache
           - scalafmt-native
