--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,4 @@
 {
-    "name": "${localWorkspaceFolderBasename}",
-	"runArgs": ["--name", "dc-${localWorkspaceFolderBasename}"],
-
-    "image": "mcr.microsoft.com/devcontainers/javascript-node:1-20-bookworm",
     "customizations": {
         "vscode": {
             "settings": {
@@ -22,19 +18,14 @@
             ]
         }
     },
-    "mounts": [
-        {
-            "source": "${localEnv:HOME}/.ssh",
-            "target": "/home/node/.ssh",
-            "type": "bind"
-        }
-    ],
     "features": {
         "ghcr.io/devcontainers/features/common-utils:2.5.2": {
 			"configureZshAsDefaultShell": true,
 			"installOhMyZshConfig": true
 		},
         "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+        "ghcr.io/devcontainers/features/github-cli:1": {},
+		"ghcr.io/devcontainers/features/node:1": {},
 		"ghcr.io/devcontainers-extra/features/zsh-plugins:0.0.4": {
 			"plugins": "colorize zsh-autosuggestions zsh-syntax-highlighting",
 			"omzPlugins": "https://github.com/zsh-users/zsh-autosuggestions https://github.com/zsh-users/zsh-syntax-highlighting.git"
@@ -43,7 +34,18 @@
         "ghcr.io/guiyomh/features/just:0.1.0": {
             "version": "1.38.0"
         },
+		"ghcr.io/michalbachowski/devcontainer-features/merge-pr:0.0.1": {},
         "ghcr.io/stuartleeks/dev-container-features/shell-history:0": {}
     },
-    "remoteUser": "node"
+    "image": "mcr.microsoft.com/devcontainers/base:noble",
+    "mounts": [
+        {
+            "source": "${localEnv:HOME}/.ssh",
+            "target": "/root/.ssh",
+            "type": "bind"
+        }
+    ],
+    "name": "${localWorkspaceFolderBasename}",
+    "remoteUser": "root",
+	"runArgs": ["--name", "dc-${localWorkspaceFolderBasename}"]
 }
